# veil

./: .gitignore  BRAND_GUIDELINES.md  README.md  create_issues.sh  create_phase4_issues.sh  create_phase5_issues.sh  create_wallet_issues.sh  create_wallet_issues_2.sh  criteria.md  issues_draft.md  issues_draft_phase4.md  issues_draft_phase5.md  package.json  tsconfig.json
.github/workflows/: ci.yml
contracts/: Cargo.toml
contracts/factory/: Cargo.toml
contracts/factory/src/: lib.rs  validation.rs
contracts/factory/test_snapshots/test/: test_deploy_before_init_fails.1.json  test_double_init_fails.1.json  test_duplicate_deploy_fails.1.json  test_duplicate_deploy_prevented.1.json  test_init_stores_wasm_hash.1.json  test_invalid_public_key_bad_prefix.1.json
contracts/invisible_wallet/src/: auth.rs  lib.rs  storage.rs
frontend/docs/: package-lock.json  package.json  theme.config.tsx  tsconfig.json
frontend/docs/pages/: _meta.json  _meta.ts  agent-integration.mdx  architecture.mdx  contract-api.mdx  getting-started.mdx  index.mdx  sdk-reference.mdx  security.mdx
frontend/docs/styles/: globals.css
frontend/wallet/: .env.example  next.config.js  package-lock.json  package.json  tsconfig.json
frontend/wallet/app/: InstallBanner.tsx  globals.css  layout.tsx  (+2 more)
frontend/website/: package-lock.json  package.json  tailwind.config.js
scripts/: deploy_factory.sh  smoke_test.ts
scripts/tests/: deploy_factory.bats
sdk/: package-lock.json  package.json
sdk/src/: useInvisibleWallet.ts
specs/factory-contract/: .config.kiro  design.md  requirements.md  tasks.md
(+37 files in other folders)
